# rust_wasm_book

./: .gitignore  README.md
frontend/: index.html  index.js  package.json
wasm_rust/: Cargo.toml
wasm_rust/src/: lib.rs  utils.rs
wasm_rust/tests/: web.rs
