[package]
name = "wasm-rust"
version = "0.1.0"
authors = ["陈定涛 <dingtaochen@zhongkehuizhou.com>"]
edition = "2018"

# 禁用 wasm-opt
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
# wasm-bindgen-test 和 wasm-bindgen 区别
wasm-bindgen-test = "0.3.34"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
